<resources>
    <string name="app_name" translatable="false">Fast Clean App</string>
    <string name="admob_adview_id">ca-app-pub-2272866171011454/4397888972</string>
    <string name="no_files_found">No files found</string>
    <string name="delete_empty_folders">Delete empty folders</string>
    <string name="aggressive_filter">Enable aggressive filter</string>
    <string name="save">Save</string>
    <string name="filter">Filter</string>
    <string name="whitelist">Whitelist</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="add_to_whitelist">Add to whitelist</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="enter_file_name">Enter file/folder name to whitelist</string>
    <string name="make_suggestion">Make Suggestion</string>
    <string name="select_task">Select a task</string>
    <string name="do_you_want_to">Do you want to delete (Clean) all found files, or only display (Analyze) them?</string>
    <string name="clean">Clean</string>
    <string name="analyze">Analyze</string>
    <string name="enable_generic_filter">Enable generic filter</string>
    <string name="freed">Freed: </string>
    <string name="found">Found: </string>
    <string name="auto_whitelist">Auto Whitelist</string>
    <string name="reset_whitelist">Empty whitelist?</string>
    <string name="are_you_reset_whitelist">Are you sure you want to clear the whitelist?</string>
    <string name="reset">Clear</string>
    <string name="delete_apk_files">Delete .apk files</string>
    <string name="default_whitelist">Default Whitelist</string>
    <string name="add_defaults">Add Recommended Whitelists</string>
    <string name="nothing_found">Nothing found</string>
    <string name="status_idle">Status: Idle</string>
    <string name="progress_0"> </string>
    <string name="status_running">Status: Running</string>
    <string name="privacy_sum">View the privacy policy</string>
    <string name="whitelist_sum">Shows the paths to exclude from scans</string>
    <string name="suggestion_sum">Open an issue on GitHub from the app. No account needed</string>
    <string name="generic_sum">.exo, .tmp, .log, Logs, logs</string>
    <string name="aggressive_sum">Too much to list here</string>
    <string name="apk_sum">Installer files for android</string>
    <string name="autowhite_sum">Detect folders that should be protected automatically</string>
    <string name="prompt_string">Please add file access permissions</string>
    <string name="settings_string">Settings</string>
    <string name="title_activity_prompt">PromptActivity</string>
    <string name="corpse_summary">Files left over from uninstalled apps</string>
    <string name="corpse_title">Delete corpse files</string>
    <string name="recommended">Recommended</string>
    <string name="whitelist_default">Default</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="daily_title">Daily Clean</string>
    <string name="daily_sum">Automatically runs daily, without you having to open the app</string>
    <string name="other_apps">Check out my other apps!</string>
    <string-array name="generic_filter_files">
        <item>.exo</item>
        <item>.tmp</item>
        <item>.log</item>
    </string-array>
    <string-array name="generic_filter_folders">
        <item>Logs</item>
        <item>logs</item>
        <item>temp</item>
        <item>Temporary</item>
        <item>temporary</item>
        <item>Bugreport</item>
        <item>bugreports</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string-array name="aggressive_filter_folders">
        <item>supersonicads</item>
        <item>Cache</item>
        <item>Analytics</item>
        <item>thumbnails?</item>
        <item>mobvista</item>
        <item>UnityAdsVideoCache</item>
        <item>albumthumbs?</item>
        <item>LOST.DIR</item>
        <item>.Trash</item>
        <item>desktop.ini</item>
        <item>leakcanary</item>
        <item>.DS_Store</item>
        <item>.spotlight-V100</item>
        <item>fseventsd</item>
        <item>.Trash</item>
        <item>cache</item>
    </string-array>
    <string-array name="aggressive_filter_files">
        <item>thumbs?.db</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="clean_text">Очистить</string>
    <string name="cooling_system">Охлаждение системы</string>
    <string name="ram_cleaned">Освобождение\nоперативной памяти</string>
    <string name="closing_heated_apps">Переводим в спящий режим ресурсоемкие приложения</string>
    <string name="boost_text">Ускорить</string>
    <string name="cool_text">Охладить</string>
    <string name="battery_saver_text">Оптимизировать батарею</string>
    <string name="cool">Охлаждение</string>
    <string name="analyze_splash">Анализация системы...</string>
    <string name="main_boost">Ускорить</string>
    <string name="allow">Разрешить</string>
    <string name="find_app">Найдите приложение</string>
    <string name="give_permission">Для эффективной оптимизации нужно\nпредоставить доступ к статистике\nиспользования приложений.</string>
    <string name="give_permission_top">Выдайте разрешение</string>
    <string name="app_manager">Менеджер Приложений</string>
    <string name="delete">Удалить</string>
    <string name="recommended_also">Рекомендуем так же:</string>
    <string name="optimize_success">Успешно оптимизировано</string>
    <string name="optimize_battery">Оптимизация\nэнергопотребления</string>
    <string name="normal_mood">Обычный режим</string>
    <string name="low_saving">Средняя экономия заряда</string>
    <string name="hard_saving">Максимальная экономия заряда</string>
    <string name="scan_ram">Сканирование\nОЗУ...</string>
    <string name="found_boost">Найдено</string>
    <string name="running_apps">Запущенные приложения</string>
    <string name="done">Выполнено</string>
    <string name="getting_info">Получение данных</string>
    <string name="overheated">Может быть перегрето</string>
    <string name="scan_memory">Сканирование памяти\nУстройств</string>
    <string name="visible_hash">Видимый кеш</string>
    <string name="app_files">Файлы данных</string>
    <string name="app_files_load">Данные приложений</string>
    <string name="ad_trash">Рекламный мусор</string>
    <string name="used_memory">Использовано памяти</string>
    <string name="used_ram">Использовано RAM</string>
    <string name="scan">Сканировать</string>
    <string name="main_clean">Очистка</string>
    <string name="boost">Ускорение</string>
    <string name="battery_save">Экономия\nзаряда</string>
    <string name="app_manager_with_space">Менеджер\nприложений</string>
    <string name="last_used_time">Последнее время использования</string>
    <string name="used_time">Время работы приложения</string>
    <string name="hours">ч</string>
    <string name="never">Никогда</string>
    <string name="closed">Закрыто</string>
    <string name="apps">приложений</string>
    <string name="clean_app_files">Освобождение данных\nприложений</string>
    <string name="paywall">PRO version</string>
    <string name="hurryup">HURRY! LAST CHANCE!\n25% OFF</string>
    <string name="freetrial">7-day Free Trial. Cancel Anytime</string>
    <string name="monthly">MONTHLY</string>
    <string name="yearly">YEARLY</string>
    <string name="month">month</string>
    <string name="disscount">25% OFF</string>
    <string name="withoutadvertising">Without advertising</string>
    <string name="phonecleaningwithoutadvertising">Phone cleaning without advertising</string>
    <string name="continuousimprovement">Continuous improvement</string>
    <string name="early_access">Early access to all new features and improvements</string>
    <string name="support">Support</string>
    <string name="usersupport">Priority user support</string>
    <string name="paywall_policy">Your subscription will automatically renew at the end of each term and your credit card will be charged through your Google Play account unless you unsubscribe Refund will not be provided for any unused portion of the term. Any unused portion of a free trial period will be forfeited when you purchase a subscription. By continuing you agree to our Terms of use and privacy policy</string>

</resources>