<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.FragmentMain">

<androidx.constraintlayout.widget.Guideline
    android:layout_width="wrap_content"
    android:layout_height="1dp"
    android:orientation="horizontal"
    app:layout_constraintGuide_percent="0.31"
    android:id="@+id/circle_view_percent"
    />
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.23"
        android:id="@+id/cgl_circle_view"
        />
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15"
        android:id="@+id/cgl_menu_start"
        />
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85"
        android:id="@+id/cgl_menu_end"
        />
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75"
        android:id="@+id/cgl_menu_top"
        />
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85"
        android:id="@+id/cgl_menu_bottom"
        />
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.43"
        android:id="@+id/circle_view_text"
        />
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.52"
        android:id="@+id/circle_view_below"
        />
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05"
        android:id="@+id/cgl_top"
        />
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05"
        android:id="@+id/cgl_top_start"
        />
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95"
        android:id="@+id/cgl_top_end"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="74,2%"
        android:textColor="#2D2D2D"
        android:textSize="18sp"
        android:id="@+id/tv_ram_usage"
        app:layout_constraintEnd_toStartOf="@+id/cgl_top_end"
        app:layout_constraintTop_toBottomOf="@id/cgl_top"
        />
    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.13"
        android:progress="50"
        android:id="@+id/lpi_ram_progress"
        android:layout_marginTop="5dp"
        app:indicatorColor="#0035FF"
        app:layout_constraintTop_toBottomOf="@+id/tv_memory_usage"
        app:circularflow_defaultRadius="20dp"
        app:trackCornerRadius="20dp"
        app:layout_constraintEnd_toStartOf="@+id/cgl_top_end"
        app:trackColor="#595E81FF"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/used_ram"
        android:textColor="#2D2D2D"
        android:id="@+id/tv_ram"
        android:textSize="10sp"
        app:layout_constraintTop_toBottomOf="@+id/lpi_progress"
        app:layout_constraintEnd_toEndOf="@+id/cgl_top_end"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="74,2%"
        android:textColor="#2D2D2D"
        android:textSize="18sp"
        android:id="@+id/tv_memory_usage"
app:layout_constraintStart_toEndOf="@+id/cgl_top_start"
        app:layout_constraintTop_toBottomOf="@id/cgl_top"
        />
    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.13"
        android:progress="50"
        android:id="@+id/lpi_progress"
        android:layout_marginTop="5dp"
        app:indicatorColor="#0035FF"
        app:layout_constraintTop_toBottomOf="@+id/tv_memory_usage"
app:circularflow_defaultRadius="20dp"
        app:trackCornerRadius="20dp"
        app:layout_constraintStart_toEndOf="@+id/cgl_top_start"
        app:trackColor="#595E81FF"

        />
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/used_memory"
    android:textColor="#2D2D2D"
    android:textSize="10sp"
    app:layout_constraintTop_toBottomOf="@+id/lpi_progress"
    app:layout_constraintStart_toEndOf="@+id/cgl_top_start"
    />
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:lottie_rawRes="@raw/anim_circle_background"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iv_scan_view"
        app:layout_constraintBottom_toBottomOf="@+id/iv_scan_view"

        app:lottie_autoPlay="true"
        app:lottie_loop="true"/>
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationView1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:lottie_rawRes="@raw/anim_circle_background"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iv_scan_view"
        app:layout_constraintBottom_toBottomOf="@+id/iv_scan_view"

        app:lottie_autoPlay="true"
        app:lottie_loop="true"/>
<ImageView
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:src="@drawable/ic_group_21"
    app:layout_constraintHeight_percent="0.33"
    app:layout_constraintDimensionRatio="1:1"
    android:id="@+id/iv_scan_view"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/cgl_circle_view"

    />

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="76%"
    android:textColor="#ffffff"
    android:textSize="48sp"
    android:id="@+id/tv_circle_percent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/circle_view_percent"
    />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scan"
        android:textColor="#ffffff"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/circle_view_text"
        />

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_boost"

        app:backgroundTint="@null"
        android:background="@drawable/gradient_button"
        android:id="@+id/iv_boost_main"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/circle_view_below"
        app:layout_constraintBottom_toTopOf="@+id/iv_boost"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_cleann"
        android:id="@+id/iv_clean"
        app:layout_constraintTop_toBottomOf="@+id/cgl_menu_top"
app:layout_constraintStart_toEndOf="@+id/cgl_menu_start"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_cool"
        android:id="@+id/iv_cool"
        app:layout_constraintTop_toBottomOf="@+id/cgl_menu_top"
        app:layout_constraintEnd_toStartOf="@+id/cgl_menu_end"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_boost_main"
        android:id="@+id/iv_boost"
        app:layout_constraintTop_toBottomOf="@+id/cgl_menu_top"
     app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
       />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_clean"
        app:layout_constraintStart_toStartOf="@id/iv_clean"
        app:layout_constraintEnd_toEndOf="@id/iv_clean"
        app:layout_constraintTop_toBottomOf="@+id/iv_clean"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boost"
        android:layout_marginTop="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_clean"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cool"
        app:layout_constraintStart_toStartOf="@id/iv_cool"
        app:layout_constraintEnd_toEndOf="@id/iv_cool"
        app:layout_constraintTop_toBottomOf="@+id/iv_clean"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_battery_saver"
        android:id="@+id/iv_battery_saver"
        app:layout_constraintTop_toBottomOf="@+id/cgl_menu_bottom"
        app:layout_constraintStart_toStartOf="@+id/cgl_menu_start"

        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_app_manager"
        android:layout_marginTop="5dp"
        android:id="@+id/iv_clean_notifications"
        app:layout_constraintTop_toBottomOf="@+id/cgl_menu_bottom"
        app:layout_constraintStart_toStartOf="@+id/iv_cool"
        app:layout_constraintEnd_toEndOf="@+id/iv_cool"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_paywall_icon"
        android:id="@+id/iv_paywall"
        app:layout_constraintTop_toBottomOf="@+id/cgl_menu_bottom"
        app:layout_constraintStart_toStartOf="@+id/cgl_bottom_start_menu"
        app:layout_constraintEnd_toEndOf="@+id/cgl_bottom_end_menu"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/battery_save"
        android:textAlignment="center"
        android:id="@+id/tv_battery_saver"
        app:layout_constraintStart_toStartOf="@+id/iv_battery_saver"
        app:layout_constraintEnd_toEndOf="@+id/iv_battery_saver"
        app:layout_constraintTop_toBottomOf="@+id/iv_battery_saver"
        />
<androidx.constraintlayout.widget.Guideline
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:id="@+id/cgl_bottom_start_menu"
    app:layout_constraintGuide_percent="0.35"
    android:orientation="vertical"
    />
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/cgl_bottom_end_menu"
        app:layout_constraintGuide_percent="0.65"
        android:orientation="vertical"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_manager_with_space"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="@+id/iv_clean_notifications"
        app:layout_constraintEnd_toEndOf="@+id/iv_clean_notifications"
        app:layout_constraintTop_toTopOf="@+id/tv_battery_saver"
        app:layout_constraintBottom_toBottomOf="@+id/tv_battery_saver"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/paywall"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="@+id/cgl_bottom_start_menu"
        app:layout_constraintEnd_toEndOf="@+id/cgl_bottom_end_menu"
        app:layout_constraintTop_toTopOf="@+id/tv_battery_saver"
        />
</androidx.constraintlayout.widget.ConstraintLayout>